force-app/main/default/objects/Calendly_Lead_Field_Configuration__mdt/Calendly_Lead_Field_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Calendly Lead Field Configuration</label>
    <pluralLabel>Calendly Lead Field Configurations</pluralLabel>
</CustomObject>