force-app/main/default/objects/Calendly_Lead_Field_Configuration__mdt/fields/Multiselect_Lead_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Multiselect_Lead_Mapping__c</fullName>
    <label>Multiselect-Lead Mapping</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>