force-app/main/default/objects/Calendly_Lead_Field_Configuration__mdt/fields/Question_Response_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Question_Response_Mapping__c</fullName>
    <label>Question/Response Mapping</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>