force-app/main/default/objects/Calendly_Lead_Field_Configuration__mdt/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <label>Slug</label>
    <length>50</length>
    <type>Text</type>
</CustomField>