force-app/main/default/objects/Calendly_Lead_Field_Configuration__mdt/listViews/Slug_Value.listView-meta.xml
<ListView>
    <fullName>Slug_Value</fullName>
    <columns>Event_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Slug__c</columns>
    <filterScope>Everything</filterScope>
    <label>Slug Value</label>
    <language>en_US</language>
</ListView>